update project name

--- a/examples/admin/admin/main.html
+++ b/examples/admin/admin/main.html
@@ -53,7 +53,7 @@
 <div id="app">
     <template>
         <el-menu
-            class="el-menu-demo"
+            class="el-menu-example"
             background-color="#000000"
             text-color="#fff"
             active-text-color="#fff"
