--- a/examples/javascript/index.html
+++ b/examples/javascript/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>client demo</title>
+    <title>client example</title>
     <script src="client.js"></script>
     <script>
       var onStart = function () {
