--- a/examples/admin/chat_main.html
+++ b/examples/admin/chat_main.html
@@ -8,9 +8,9 @@
     <script src="https://cdn.staticfile.org/vue/2.6.9/vue.min.js"></script>
     <script src="https://cdn.staticfile.org/element-ui/2.15.1/index.js"></script>
     <script src="https://cdn.staticfile.org/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="/static/css/common.css?v=0.3.8">
-    <script src="/static/js/functions.js"></script>
-    <script src="/static/js/reconnecting-websocket.min.js"></script>
+    <link rel="stylesheet" href="./static/css/common.css?v=0.3.8">
+    <script src="./static/js/functions.js"></script>
+    <script src="./static/js/reconnecting-websocket.min.js"></script>
 </head>
 <body>
 <div id="app" class="chatMainPage">
@@ -186,5 +186,5 @@
     </template>
 </div>
 </body>
-<script src="/static/js/chat-main.js?v=1"></script>
+<script src="./static/js/chat-main.js?v=1"></script>
 </html>
