--- a/examples/admin/main.html
+++ b/examples/admin/main.html
@@ -10,8 +10,8 @@
     <script src="https://cdn.staticfile.org/element-ui/2.15.1/index.js"></script>
     <script src="https://cdn.staticfile.org/jquery/3.6.0/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="/static/css/common.css">
-    <script src="/static/js/functions.js"></script>
+    <link rel="stylesheet" href="./static/css/common.css">
+    <script src="./static/js/functions.js"></script>
     <style>
         html,
         body {
@@ -130,7 +130,7 @@
 
                 let token = localStorage.getItem("token")
                 console.log(token)
-                let data = {"code":200,"msg":"验证成功","result":{"avator":"/static/images/4.jpg","name":"kefu2","role_name":"管理员"}}
+                let data = {"code":200,"msg":"验证成功","result":{"avator":"./static/images/4.jpg","name":"kefu2","role_name":"管理员"}}
                 _this.adminAvator=data.result.avator;
                 _this.adminRole=data.result.role_name;
                 _this.iframeUrl = "/admin/welcome.html";
