--- a/examples/admin/setting.html
+++ b/examples/admin/setting.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.staticfile.org/element-ui/2.15.1/index.js"></script>
     <script src="https://cdn.staticfile.org/jquery/3.6.0/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="/static/css/common.css">
+    <link rel="stylesheet" href="./static/css/common.css">
     <style>
         html,
         body {
