--- a/examples/front/index.html
+++ b/examples/front/index.html
@@ -13,8 +13,8 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>客服咨询</title>
-    <link rel="stylesheet" type="text/css" href="/imstatic/css/mui.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/imstatic/css/css.css"/> 
+    <link rel="stylesheet" type="text/css" href="./imstatic/css/mui.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./imstatic/css/css.css"/> 
 <style type="text/css">
 div{
     -webkit-user-select:text;
@@ -318,20 +318,20 @@ z-index: 999; }
                         
                     <div class="face_box_body">    
                         <div id="face_box_body_qq" class="face_box_body_item active"> 
-                            <a title="微笑"><img src="imstatic/img/qq/100.png"></a> 
-                            <a title="撇嘴"><img src="imstatic/img/qq/101.png"></a> 
-                            <a title="色"><img src="imstatic/img/qq/102.png"></a> 
-                            <a title="发呆"><img src="imstatic/img/qq/103.png"></a>
-                            <a title="得意"><img src="imstatic/img/qq/104.png"></a> 
-                            <a title="害羞"><img src="imstatic/img/qq/105.png"></a> 
-                            <a title="尴尬"><img src="imstatic/img/qq/106.png"></a>  
-                            <a title="调皮"><img src="imstatic/img/qq/107.png"></a>  
-                            <a title="呲牙"><img src="imstatic/img/qq/108.png"></a>
-                            <a title="惊讶"><img src="imstatic/img/qq/109.png"></a>
-                            <a title="酷"><img src="imstatic/img/qq/110.png"></a> 
-                            <a title="冷汗"><img src="imstatic/img/qq/111.png"></a>  
-                            <a title="偷笑"><img src="imstatic/img/qq/112.png"></a>
-                            <a title="可爱"><img src="imstatic/img/qq/113.png"></a> 
+                            <a title="微笑"><img src="./imstatic/img/qq/100.png"></a> 
+                            <a title="撇嘴"><img src="./imstatic/img/qq/101.png"></a> 
+                            <a title="色"><img src="./imstatic/img/qq/102.png"></a> 
+                            <a title="发呆"><img src="./imstatic/img/qq/103.png"></a>
+                            <a title="得意"><img src="./imstatic/img/qq/104.png"></a> 
+                            <a title="害羞"><img src="./imstatic/img/qq/105.png"></a> 
+                            <a title="尴尬"><img src="./imstatic/img/qq/106.png"></a>  
+                            <a title="调皮"><img src="./imstatic/img/qq/107.png"></a>  
+                            <a title="呲牙"><img src="./imstatic/img/qq/108.png"></a>
+                            <a title="惊讶"><img src="./imstatic/img/qq/109.png"></a>
+                            <a title="酷"><img src="./imstatic/img/qq/110.png"></a> 
+                            <a title="冷汗"><img src="./imstatic/img/qq/111.png"></a>  
+                            <a title="偷笑"><img src="./imstatic/img/qq/112.png"></a>
+                            <a title="可爱"><img src="./imstatic/img/qq/113.png"></a> 
                         </div> 
                             
                         <div id="face_box_body_pic" class="face_box_body_item">
@@ -360,7 +360,7 @@ z-index: 999; }
         </footer>
     </body>
 
-    <script src="/imstatic/js/jquery.min.js"  type="text/javascript"></script>  
-    <script src="/imstatic/js/ajaxfileupload.js"  type="text/javascript"></script>  
-    <script src="/imstatic/js/goim.js?4422223"  type="text/javascript"></script>   
+    <script src="./imstatic/js/jquery.min.js"  type="text/javascript"></script>  
+    <script src="./imstatic/js/ajaxfileupload.js"  type="text/javascript"></script>  
+    <script src="./imstatic/js/goim.js?4422223"  type="text/javascript"></script>   
 </html>
