--- a/examples/front/index.html
+++ b/examples/front/index.html
@@ -362,5 +362,5 @@ z-index: 999; }
 
     <script src="./imstatic/js/jquery.min.js"  type="text/javascript"></script>  
     <script src="./imstatic/js/ajaxfileupload.js"  type="text/javascript"></script>  
-    <script src="./imstatic/js/goim.js?4422223"  type="text/javascript"></script>   
+    <script src="./imstatic/js/goim.js?48145"  type="text/javascript"></script>   
 </html>
